package com.rick.util

object TestTags {

    const val newAccountTitle = "newAccountTitle"
    const val newAccountDescription = "newAccountDescription"
    const val newAccountLimit = "newAccountLimit"
    const val newAccountBalance = "newAccountBalance"

    const val textButtonDropDown = "textButtonDropDown"
    const val dropDownItem = "dropDownItem"

    const val detailsMoreVert = "detailsMoreVert"
    const val detailsMoreVertItem = "detailsMoreVertItem"

}