...
                modifier = modifier,
                backgroundColor = Color.White,
                title = {},
                navigationIcon = {
                    Icon(
                        imageVector = Icons.Default.ArrowBack,
                        contentDescription = "NavigateUp",
                        modifier = Modifier.clickable { onNavigationIconClick() }
                    )
                },
                actions = {
                    IconButton(onClick = { onSettingsClick( viewModel.accountId!!) } ){ Icon(
                        imageVector = Icons.Default.Settings,
                        contentDescription = "Settings"
                    ) }
                    Spacer(modifier = modifier.width(8.dp))
                    DetailsDropDownMenu(
                        icon = Icons.Default.MoreVert,
                        contentDescription = TestTags.detailsMoreVert,
                        onMenuItemOneClick = { viewModel.onEvent( AccountDetailsEvents.ChangeMainStatus) },
...
