...
        items(accounts) {
            BaseRow(
                modifier = Modifier
                    .clickable {
                        onAccountClick(it.id!!)
                    }
                    .semantics { contentDescription = "AccountRow" },
                icon = AccountIcon.values()[it.icon].imageVector,
                title = it.title,
                bottomRowText = it.currency,
                balance = it.balance.toFloat()
            )
        }
...
